--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,15 @@
     <script src="bower_components/d3/d3.min.js"></script>
     <script src="bower_components/nvd3/nv.d3.js"></script>
     <script src="bower_components/nvd3/nv.d3.min.js"></script>
+    <script src="bower_components/nvd3/nv.d3.min.js"></script>
+    <script src="bower_components/nvd3/nv.d3.min.js"></script>
+    <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+    <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.min.js"></script>
+
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/nvd3directives.js"></script>
     <!-- endbuild -->
 
   </head>
@@ -47,7 +53,24 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+<!--     <div class="container" ng-view=""></div>
+ -->
+  <div ng-controller="ExampleCtrl">
+      <nvd3-scatter-chart
+              data="exampleData"
+              id="exampleId"
+              width="1600"
+              height="1300"
+              margin="{left:150,top:100,bottom:100,right:150}"
+              tooltips="true"
+              interactive="true"
+              tooltipContent="tooltipXContentFunction()"
+              shape="getShapeCross()">
+          <svg></svg>
+      </nvd3-scatter-chart>
+  </div>
+
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -59,6 +82,7 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+
 
     <!-- endbower -->
     <!-- endbuild -->
